--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "build": "webpack --config webpack.config.js"
   },
   "devDependencies": {
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "@babel/core": "^7.23.7",
     "@babel/preset-env": "^7.23.8",
     "@babel/preset-react": "^7.23.3",
